--- a/passkey-backend/package.json
+++ b/passkey-backend/package.json
@@ -28,6 +28,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/graphql": "^13.2.0",
     "@nestjs/platform-express": "^11.0.1",
+    "@prisma/adapter-better-sqlite3": "^7.0.1",
     "@prisma/client": "^7.0.1",
     "graphql": "^16.12.0",
     "reflect-metadata": "^0.2.2",
