--- a/passkey-backend/package.json
+++ b/passkey-backend/package.json
@@ -30,6 +30,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/adapter-better-sqlite3": "^7.0.1",
     "@prisma/client": "^7.0.1",
+    "@simplewebauthn/server": "^13.2.2",
     "graphql": "^16.12.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
