--- a/passkey-backend/package.json
+++ b/passkey-backend/package.json
@@ -50,11 +50,12 @@
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
+    "graphql-request": "^7.3.5",
     "jest": "^30.0.0",
     "prettier": "^3.4.2",
     "prisma": "^7.0.1",
     "source-map-support": "^0.5.21",
-    "supertest": "^7.0.0",
+    "supertest": "^7.1.4",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
