--- a/passkey-frontend/package.json
+++ b/passkey-frontend/package.json
@@ -9,6 +9,7 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
     "@react-router/node": "7.12.0",
     "@react-router/serve": "7.12.0",
