--- a/passkey-backend/tsconfig.json
+++ b/passkey-backend/tsconfig.json
@@ -19,7 +19,6 @@
     "strictNullChecks": true,
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": true,
-    "strictBindCallApply": true,
-    "noFallthroughCasesInSwitch": true
+    "strictBindCallApply": true
   }
 }
