be: add tests for register mutation

--- a/passkey-backend/tsconfig.json
+++ b/passkey-backend/tsconfig.json
@@ -19,6 +19,11 @@
     "strictNullChecks": true,
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": true,
-    "strictBindCallApply": true
+    "strictBindCallApply": true,
+    "paths": {
+      "src/*": [
+        "src/*"
+      ]
+    }
   }
 }
