--- a/passkey-frontend/package.json
+++ b/passkey-frontend/package.json
@@ -9,6 +9,7 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@apollo/client": "^4.1.3",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
@@ -18,6 +19,7 @@
     "@react-router/serve": "7.12.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "graphql": "^16.12.0",
     "isbot": "^5.1.31",
     "lucide-react": "^0.563.0",
     "react": "^19.2.3",
