--- a/passkey-backend/package.json
+++ b/passkey-backend/package.json
@@ -37,6 +37,7 @@
     "graphql": "^16.12.0",
     "graphql-type-json": "^0.3.2",
     "jsonwebtoken": "^9.0.3",
+    "moment": "^2.30.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
