--- a/passkey-frontend/package.json
+++ b/passkey-frontend/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@react-router/node": "7.12.0",
     "@react-router/serve": "7.12.0",
+    "@simplewebauthn/browser": "^13.2.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "graphql": "^16.12.0",
