be: prepare setup configuration

--- a/passkey-backend/.env_schema
+++ b/passkey-backend/.env_schema
@@ -1,7 +1,9 @@
-DATABASE_URL=
+DATABASE_URL="file:./local.db"
 
-PASSWD_PEPPER=
-SALT_ROUNDS=
+FRONTEND_URL="http://localhost:5173"
 
-JWT_ACCESS_SECRET=
-JWT_REFRESH_SECRET=
+PASSWD_PEPPER="test-pepper"
+SALT_ROUNDS=12
+
+JWT_ACCESS_SECRET="ACCESS_SECRET_REPLACE"
+JWT_REFRESH_SECRET="ACCESS_SECRET_REPLACE"
