--- a/passkey-backend/package.json
+++ b/passkey-backend/package.json
@@ -17,7 +17,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "NODE_ENV=test jest --config test/jest-e2e.json"
+    "test:e2e": "NODE_ENV=test jest --config test/jest-e2e.json",
+    "prisma:init": "npx prisma generate && npx prisma migrate dev"
   },
   "dependencies": {
     "@apollo/server": "^5.1.0",
